
[package]
name = "qjs-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-js = { version = "0.4.1", features = ["log"] }
libquickjs-sys = "0.10.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
